# base64-utils

./: 404.html  Cargo.toml  README.md  index.html  pyproject.toml  requirements.txt  sitemap.xml
.github/: ci.yml
.github/workflows/: ci.yml  codspeed.yml
benchmarks/: README.md  bench_encode.py
docs/: index.md
python/base64_utils/: __init__.py  __init__.pyi
search/: search_index.json
src/: lib.rs
tests/: test_base64_decode.py  test_benchmarks.py  test_encode.py
